tests/error/enum_declared.gw
// [contains] already declared as variable
 int i;
enum
{
  test
} i;
